[threaded-animations] crash under `RemoteLayerTreeEventDispatcher::scrollingTreeWasRecentlyActive()` https://bugs.webkit.org/show_bug.cgi?id=308430 <rdar://170919668>

Reviewed by Tim Nguyen.

RemoteAnimationStack can be created on the main thread, but also have
refcounting from the animation thread.

It's always accessed under the animation lock, so there shouldn't be any races,
but we need threadsafe refcounting to avoid safety checks from complaining.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteAnimationStack.h:

Canonical link: https://commits.webkit.org/308238@main